@@ -48,139 +48,137 @@ public class EquivalencyTest {
     }
 
     static Automaton automaton1a() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b', 'c', 'd'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("q0", "q1", 'a');
-        automaton.addTransition("q1", "q2", 'b');
-        automaton.addTransition("q2", "q3", 'c');
-        automaton.addTransition("q3", "q3", 'd');
-        automaton.setInitialState("q0");
-        automaton.addFinalState("q3");
-        return automaton;
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('a', 'b', 'c', 'd'))
+                .addTransition("q0", "q1", 'a')
+                .addTransition("q1", "q2", 'b')
+                .addTransition("q2", "q3", 'c')
+                .addTransition("q3", "q3", 'd')
+                .setInitialState("q0")
+                .addFinalState("q3")
+                .build();
     }
 
     static Automaton automaton1b() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b', 'c', 'd'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("p0", "p1", 'a');
-        automaton.addTransition("p1", "p2", 'b');
-        automaton.addTransition("p2", "p3", 'c');
-        automaton.addTransition("p3", "p3", 'd');
-        automaton.setInitialState("p0");
-        automaton.addFinalState("p3");
-        return automaton;
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('a', 'b', 'c', 'd'))
+                .addTransition("p0", "p1", 'a')
+                .addTransition("p1", "p2", 'b')
+                .addTransition("p2", "p3", 'c')
+                .addTransition("p3", "p3", 'd')
+                .setInitialState("p0")
+                .addFinalState("p3")
+                .build();
     }
 
     static Automaton automaton2a() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("q0", "q1", 'a');
-        automaton.addTransition("q0", "q2", 'b');
-        automaton.addTransition("q1", "q2", 'a');
-        automaton.addTransition("q1", "q0", 'b');
-        automaton.addTransition("q2", "q0", 'a');
-        automaton.addTransition("q2", "q1", 'b');
-        automaton.addTransition("q2", "q3", 'a');
-        automaton.addTransition("q2", "q3", 'b');
-        automaton.addTransition("q3", "q3", 'a');
-        automaton.addTransition("q3", "q3", 'b');
-        automaton.setInitialState("q0");
-        automaton.addFinalState("q2");
-        automaton.addFinalState("q3");
-        return automaton;
+        return new Automaton.Builder().setAlphabet(Set.of('a', 'b'))
+                .addTransition("q0", "q1", 'a')
+                .addTransition("q0", "q2", 'b')
+                .addTransition("q1", "q2", 'a')
+                .addTransition("q1", "q0", 'b')
+                .addTransition("q2", "q0", 'a')
+                .addTransition("q2", "q1", 'b')
+                .addTransition("q2", "q3", 'a')
+                .addTransition("q2", "q3", 'b')
+                .addTransition("q3", "q3", 'a')
+                .addTransition("q3", "q3", 'b')
+                .setInitialState("q0")
+                .addFinalState("q2")
+                .addFinalState("q3")
+                .build();
     }
 
     static Automaton automaton2b() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("p0", "p1", 'a');
-        automaton.addTransition("p0", "p2", 'b');
-        automaton.addTransition("p1", "p2", 'a');
-        automaton.addTransition("p1", "p0", 'b');
-        automaton.addTransition("p2", "p0", 'a');
-        automaton.addTransition("p2", "p1", 'b');
-        automaton.addTransition("p2", "p3", 'a');
-        automaton.addTransition("p2", "p3", 'b');
-        automaton.addTransition("p3", "p3", 'a');
-        automaton.addTransition("p3", "p3", 'b');
-        automaton.setInitialState("p0");
-        automaton.addFinalState("p2");
-        automaton.addFinalState("p3");
-        return automaton;
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('a', 'b'))
+                .addTransition("p0", "p1", 'a')
+                .addTransition("p0", "p2", 'b')
+                .addTransition("p1", "p2", 'a')
+                .addTransition("p1", "p0", 'b')
+                .addTransition("p2", "p0", 'a')
+                .addTransition("p2", "p1", 'b')
+                .addTransition("p2", "p3", 'a')
+                .addTransition("p2", "p3", 'b')
+                .addTransition("p3", "p3", 'a')
+                .addTransition("p3", "p3", 'b')
+                .setInitialState("p0")
+                .addFinalState("p2")
+                .addFinalState("p3")
+                .build();
     }
 
     static Automaton automaton3a() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('c', 'd'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("q1", "q1", 'c');
-        automaton.addTransition("q1", "q2", 'd');
-        automaton.addTransition("q2", "q3", 'c');
-        automaton.addTransition("q2", "q1", 'd');
-        automaton.addTransition("q3", "q3", 'd');
-        automaton.addTransition("q3", "q2", 'c');
-        automaton.setInitialState("q1");
-        automaton.addFinalState("q1");
-        return automaton;
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('c', 'd'))
+                .addTransition("q1", "q1", 'c')
+                .addTransition("q1", "q2", 'd')
+                .addTransition("q2", "q3", 'c')
+                .addTransition("q2", "q1", 'd')
+                .addTransition("q3", "q3", 'd')
+                .addTransition("q3", "q2", 'c')
+                .setInitialState("q1")
+                .addFinalState("q1")
+                .build();
     }
 
     static Automaton automaton3b() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('c', 'd'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("q4", "q4", 'c');
-        automaton.addTransition("q4", "q5", 'd');
-        automaton.addTransition("q5", "q6", 'c');
-        automaton.addTransition("q5", "q4", 'd');
-        automaton.addTransition("q6", "q6", 'd');
-        automaton.addTransition("q6", "q7", 'c');
-        automaton.addTransition("q7", "q6", 'c');
-        automaton.addTransition("q7", "q4", 'd');
-        automaton.setInitialState("q4");
-        automaton.addFinalState("q4");
-        return automaton;
-
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('c', 'd'))
+                .addTransition("q4", "q4", 'c')
+                .addTransition("q4", "q5", 'd')
+                .addTransition("q5", "q6", 'c')
+                .addTransition("q5", "q4", 'd')
+                .addTransition("q6", "q6", 'd')
+                .addTransition("q6", "q7", 'c')
+                .addTransition("q7", "q6", 'c')
+                .addTransition("q7", "q4", 'd')
+                .setInitialState("q4")
+                .addFinalState("q4")
+                .build();
     }
 
     static Automaton automaton4a() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("A", "B", 'a');
-        automaton.addTransition("B", "C", 'a');
-        automaton.addTransition("B", "C", 'b');
-        automaton.addTransition("C", "D", 'a');
-        automaton.addTransition("C", "D", 'b');
-        automaton.addTransition("D", "F", 'a');
-        automaton.addTransition("D", "E", 'b');
-        automaton.addTransition("A", "G", 'b');
-        automaton.addTransition("G", "H", 'a');
-        automaton.addTransition("G", "H", 'b');
-        automaton.addTransition("H", "D", 'a');
-        automaton.addTransition("H", "D", 'b');
-        automaton.addTransition("F", "F", 'a');
-        automaton.addTransition("F", "F", 'b');
-        automaton.addTransition("E", "E", 'a');
-        automaton.addTransition("E", "E", 'b');
-        automaton.setInitialState("A");
-        automaton.addFinalState("F");
-        return automaton;
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('a', 'b'))
+                .addTransition("A", "B", 'a')
+                .addTransition("B", "C", 'a')
+                .addTransition("B", "C", 'b')
+                .addTransition("C", "D", 'a')
+                .addTransition("C", "D", 'b')
+                .addTransition("D", "F", 'a')
+                .addTransition("D", "E", 'b')
+                .addTransition("A", "G", 'b')
+                .addTransition("G", "H", 'a')
+                .addTransition("G", "H", 'b')
+                .addTransition("H", "D", 'a')
+                .addTransition("H", "D", 'b')
+                .addTransition("F", "F", 'a')
+                .addTransition("F", "F", 'b')
+                .addTransition("E", "E", 'a')
+                .addTransition("E", "E", 'b')
+                .setInitialState("A")
+                .addFinalState("F")
+                .build();
     }
 
     static Automaton automaton4b() {
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b'));
-        Automaton automaton = new Automaton(alphabet);
-        automaton.addTransition("A", "B", 'a');
-        automaton.addTransition("A", "B", 'b');
-        automaton.addTransition("B", "C", 'a');
-        automaton.addTransition("B", "C", 'b');
-        automaton.addTransition("C", "D", 'a');
-        automaton.addTransition("C", "D", 'b');
-        automaton.addTransition("D", "F", 'a');
-        automaton.addTransition("D", "E", 'b');
-        automaton.addTransition("F", "F", 'a');
-        automaton.addTransition("F", "F", 'b');
-        automaton.addTransition("E", "E", 'a');
-        automaton.addTransition("E", "E", 'b');
-        automaton.setInitialState("A");
-        automaton.addFinalState("F");
-        return automaton;
+        return new Automaton.Builder()
+                .setAlphabet(Set.of('a', 'b'))
+                .addTransition("A", "B", 'a')
+                .addTransition("A", "B", 'b')
+                .addTransition("B", "C", 'a')
+                .addTransition("B", "C", 'b')
+                .addTransition("C", "D", 'a')
+                .addTransition("C", "D", 'b')
+                .addTransition("D", "F", 'a')
+                .addTransition("D", "E", 'b')
+                .addTransition("F", "F", 'a')
+                .addTransition("F", "F", 'b')
+                .addTransition("E", "E", 'a')
+                .addTransition("E", "E", 'b')
+                .setInitialState("A")
+                .addFinalState("F")
+                .build();
     }
 }
